# nfuu-lab

./: .gitignore  README.md  subj.list
AI/LAB_1/: index.php
AI/LAB_2/: data.txt
AI/LAB_3/: index.php
CS/: README.md  lab_1.ewb
DIPLOM/: БЕЗ СКРІНІВ.pptx  З СКРІНАМИ.pptx
GM/LAB_1/: CMakeLists.txt  main.cpp
GM/LAB_2/: CMakeLists.txt  main.cpp
JAVA/: LAB_1.java  LAB_3.java  LAB_4.java  LAB_5.java  LAB_6.java  LAB_7.java  LAB_8.java  README.md
MM/LAB_1/: F.m  LAB_1.asv  S.m
MM/LAB_2/: LAB_2.m.bak
MS/: LAB_6__2_All.gps
MS/LAB_1/: LAB_1.sln
NM/: LAB_4.m  LAB_6.m
ODB/: LAB-2.createTable.sql  LAB-2.mwb  LAB-3.sql  LAB-4.sql  README.md
OOAP/LAB_1/: BooksList.class.php
OOAP/LAB_2/: index.php
OOAP/LAB_3/: index.php
OOP/LAB2/: LAB2.sln
OOP/LAB4/: LAB4.sln
OOP/LAB4N/: LAB4N.sln
OOP/LAB5/: LAB5.sln
OOP/LAB6/: LAB6.sln
OOP/LAB7/: LAB7.sln
OOP/LAB8/: LAB8.sln
OOP/Проект1/: Проект1.sln
OS/LAB1/: LAB1.sln
OS/LAB2/: LAB2.sln
OS/LAB4/: 369d125b-3a99-4752-b007-7883e1a26c66.txt
PrCADSys/LAB_1/: script.js
PrCADSys/MOD_1/: TASK_3.html
SAPR/LAB_2/: Part1.SLDPRT
SAPR/LAB_3/: Part2.SLDPRT
TI/: 1.R  2.R  3.R  4.R  6.R
TRPO/LAB_1/: LAB_1.sln
TRPO/LAB_13/: LAB_13.sln
TRPO/LAB_4/: LAB_4.sln
WEB/LAB_1/: index.html
WEB/LAB_12/: myUsers.js
WEB/LAB_13/: index.html  myUsers.js
WEB/LAB_2/: index.html
WEB/LAB_4/: index.html
WEB/LAB_8/: index.html  script.js
WEB/MOD_1/: TASK_4.html
WEB/MOD_1_Бодя/: Завдання 4.html  Завдання 6.html
WEB/MOD_2/: script.js
WEB/MOD_3/: task_3.html  task_3.js
_OLD-31/GM/LAB_1/: CMakeLists.txt
(+1353 files in other folders)
